Fixed some layout issue on mobile view

--- a/assets/sass/_core.scss
+++ b/assets/sass/_core.scss
@@ -2070,7 +2070,6 @@ body.single-activities {
       }
       .f-size {
         color: $primary;
-        text-transform: uppercase;
         margin-top: 20px;
       }
     }
